fixed button alignment

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -2,12 +2,20 @@
     border: 1px solid black;
     width: 60%;
     height: 100%;
-    padding: 10px;
+    padding: 20px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.button-container p {
+    flex-grow: 1;
 }
 
 .button {
     width: 90%;
+    margin-top: auto;
+    margin: auto;
 }
 
 .row-container {
